syntax = "proto3";

package food;
option go_package = "proto/food";

message GetFoodByIdRequest {
  int64 Id = 1;
}
message GetFoodByIdResponse {
    string  Foodid = 1;
    string  Name = 2;
    string  Brand = 3;
    float   Amount = 4;
    string  Unit = 5;
    float   Carb = 6;
    float   Portein = 7;
    float   Fat = 8;
    float   Cal = 9;
}

service FoodService {
  rpc GetFoodById(GetFoodByIdRequest) returns (GetFoodByIdResponse) {};
}
